デプロイ修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
   username: root
   password:
   host: localhost
-  database: furima-41635_development
+  database: furima-41635
 
 test:
   <<: *default
